tests/ui-stable/printdoc-no-arg.stderr
error: 1 positional argument in format string, but no arguments were given
 --> $DIR/printdoc-no-arg.rs:4:16
  |
4 |     printdoc!("{}");
  |                ^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
